{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 109,
  "lineage": "7cbf199f-793d-3ce6-422f-c99538701555",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd0765afb77bcca7",
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:instance/i-06df7ae7b0984612a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06df7ae7b0984612a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "love-keeper-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046338b9f3f68f1cd",
            "private_dns": "ip-10-0-1-61.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-13-125-158-205.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.158.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6d53f548f006da8",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d92cd715ba18e65",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca15ff9f949ce76d"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:loadbalancer/app/lovekeeper-dev-alb/2bdb87a8398903cd",
            "arn_suffix": "app/lovekeeper-dev-alb/2bdb87a8398903cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lovekeeper-dev-alb-1896275782.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:loadbalancer/app/lovekeeper-dev-alb/2bdb87a8398903cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lovekeeper-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d80d067dea4777ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d92cd715ba18e65"
              },
              {
                "subnet_id": "subnet-07a6572318a1e6c8c"
              }
            ],
            "subnets": [
              "subnet-00d92cd715ba18e65",
              "subnet-07a6572318a1e6c8c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-alb"
            },
            "vpc_id": "vpc-0aae612a3d293db9f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:listener/app/lovekeeper-dev-alb/2bdb87a8398903cd/2d75da3e6e97937d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:targetgroup/lovekeeper-dev-tg/24b37c845864115c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:listener/app/lovekeeper-dev-alb/2bdb87a8398903cd/2d75da3e6e97937d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:loadbalancer/app/lovekeeper-dev-alb/2bdb87a8398903cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.app",
            "module.compute.aws_lb_target_group.app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:targetgroup/lovekeeper-dev-tg/24b37c845864115c",
            "arn_suffix": "targetgroup/lovekeeper-dev-tg/24b37c845864115c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:targetgroup/lovekeeper-dev-tg/24b37c845864115c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:065301655985:loadbalancer/app/lovekeeper-dev-alb/2bdb87a8398903cd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lovekeeper-dev-tg",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a23843a2858e8355",
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:elastic-ip/eipalloc-0a23843a2858e8355",
            "association_id": "eipassoc-05361976661cc588b",
            "domain": "vpc",
            "id": "eipalloc-0a23843a2858e8355",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d28f12810fa5983f",
            "private_dns": "ip-10-0-1-195.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-15-165-106-165.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.106.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0eadfd3689f599e",
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:elastic-ip/eipalloc-0a0eadfd3689f599e",
            "association_id": "eipassoc-0de7d3aa506c802c2",
            "domain": "vpc",
            "id": "eipalloc-0a0eadfd3689f599e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0fe342bf463c7b249",
            "private_dns": "ip-10-0-2-49.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.49",
            "public_dns": "ec2-3-36-137-201.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.137.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:internet-gateway/igw-0727a23328a080eb3",
            "id": "igw-0727a23328a080eb3",
            "owner_id": "065301655985",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-igw"
            },
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a23843a2858e8355",
            "association_id": "eipassoc-05361976661cc588b",
            "connectivity_type": "public",
            "id": "nat-0975bd51a52ffd676",
            "network_interface_id": "eni-0d28f12810fa5983f",
            "private_ip": "10.0.1.195",
            "public_ip": "15.165.106.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d92cd715ba18e65",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-nat-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0eadfd3689f599e",
            "association_id": "eipassoc-0de7d3aa506c802c2",
            "connectivity_type": "public",
            "id": "nat-074251601ddac811a",
            "network_interface_id": "eni-0fe342bf463c7b249",
            "private_ip": "10.0.2.49",
            "public_ip": "3.36.137.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a6572318a1e6c8c",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-nat-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:route-table/rtb-0370776d3688cce3c",
            "id": "rtb-0370776d3688cce3c",
            "owner_id": "065301655985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0975bd51a52ffd676",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:route-table/rtb-00b72a9ab80f1373d",
            "id": "rtb-00b72a9ab80f1373d",
            "owner_id": "065301655985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-074251601ddac811a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:route-table/rtb-0eefb44fb5b849ab0",
            "id": "rtb-0eefb44fb5b849ab0",
            "owner_id": "065301655985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0727a23328a080eb3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f1e10af28fcd0e2",
            "route_table_id": "rtb-0370776d3688cce3c",
            "subnet_id": "subnet-094aeb1b764e3a37e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2cba22d53de027a",
            "route_table_id": "rtb-00b72a9ab80f1373d",
            "subnet_id": "subnet-0f275209759cbbd0e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cada865313f93692",
            "route_table_id": "rtb-0eefb44fb5b849ab0",
            "subnet_id": "subnet-00d92cd715ba18e65"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b8d223950c7851c",
            "route_table_id": "rtb-0eefb44fb5b849ab0",
            "subnet_id": "subnet-07a6572318a1e6c8c"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:subnet/subnet-094aeb1b764e3a37e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094aeb1b764e3a37e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065301655985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-private-subnet-1",
              "Type": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-private-subnet-1",
              "Type": "dev"
            },
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:subnet/subnet-0f275209759cbbd0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f275209759cbbd0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065301655985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-private-subnet-2",
              "Type": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-private-subnet-2",
              "Type": "dev"
            },
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:subnet/subnet-00d92cd715ba18e65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d92cd715ba18e65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065301655985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-public-subnet-1"
            },
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:subnet/subnet-07a6572318a1e6c8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a6572318a1e6c8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065301655985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-public-subnet-2"
            },
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:vpc/vpc-0aae612a3d293db9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051db5cce9adfa160",
            "default_route_table_id": "rtb-093f04491312cb448",
            "default_security_group_id": "sg-0a1440cfccd866fba",
            "dhcp_options_id": "dopt-0457b612757811a82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aae612a3d293db9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093f04491312cb448",
            "owner_id": "065301655985",
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:security-group/sg-0d80d067dea4777ca",
            "description": "Security group for lovekeeper ALB in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d80d067dea4777ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lovekeeper-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "065301655985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:security-group/sg-0ca15ff9f949ce76d",
            "description": "Security group for lovekeeper Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca15ff9f949ce76d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lovekeeper-bastion-sg",
            "name_prefix": "",
            "owner_id": "065301655985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:security-group/sg-0307ef7adf8812235",
            "description": "Security group for lovekeeper RDS in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0307ef7adf8812235",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d1c63dbbcfd3f7a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lovekeeper-dev-db-sg",
            "name_prefix": "",
            "owner_id": "065301655985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:security-group/sg-08d1c63dbbcfd3f7a",
            "description": "Security group for lovekeeper ECS in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d1c63dbbcfd3f7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d80d067dea4777ca"
                ],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "lovekeeper-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "065301655985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:065301655985:security-group/sg-044017e5ba3c36de5",
            "description": "Security group for lovekeeper ElastiCache Redis in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044017e5ba3c36de5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d1c63dbbcfd3f7a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lovekeeper-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "065301655985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lovekeeper-dev-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aae612a3d293db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    }
  ]
}